CHANGES

2012-02-15
- Config enhanced with ignored local.php config file
- Enhance documentation

2012-02-11
- First basic version