@@ -1,5 +1,9 @@
 CHANGES
 
+2012-02-19
+- Change loading of header and footer. Is now automatically loaded.
+- Fixed setting of title
+
 2012-02-15
 - Config enhanced with ignored local.php config file
 - Enhance documentation
